# egui-opengl-internal

./: Cargo.toml  LICENSE  README.md
egui-opengl-internal/: Cargo.toml
egui-opengl-internal/src/: app.rs  input.rs  lib.rs  painter.rs  utils.rs
egui-opengl-internal/src/shader/: fragment.frag  mod.rs  vertex.vert
example-wnd/: Cargo.toml
example-wnd/src/: lib.rs
