[package]
name = "egui-opengl-internal"
version = "0.1.0"
edition = "2021"
authors = ["floob, cohaereo"]
description = "opengl backend for egui library."
license = "MIT"

[lib]
path = "src/lib.rs"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["i686-pc-windows-msvc", "x86_64-pc-windows-msvc"]

[dependencies]
egui = "0.20.1"
gl = "0.14.0"
spin = { version = "0.9", optional = true, features = ["lock_api"] }
parking_lot = { version = "0.12", optional = true }
clipboard = "0.5"
thiserror = "1.0"
once_cell = "1.13"
lock_api = "0.4"
winapi = { version = "0.3.9", features = ["consoleapi"] }

[features]
default = ["parking-lot"]
no-msgs = []
clear = []
force-compile = []
save-blob = []
spin-lock = ["dep:spin"]
parking-lot = ["dep:parking_lot"]

[dependencies.windows]
version = "0.36"
features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_WindowsProgramming",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation"
]