[package]
name = "egui-opengl-internal"
version = "0.1.0"
edition = "2021"
authors = ["floob", "sy1ntexx", "unknowntrojan", "cohaereo"]
description = "opengl backend for egui library."
license = "MIT"

[lib]
path = "src/lib.rs"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["i686-pc-windows-msvc", "x86_64-pc-windows-msvc"]

[dependencies]
egui = "0.22.0"
gl = "0.14.0"
spin = { version = "0.9", optional = true, features = ["lock_api"] }
parking_lot = { version = "0.12", optional = true }
clipboard = "0.5"
thiserror = "1.0"
once_cell = "1.13"
lock_api = "0.4"
windows = { version = "0.48", features = ["Win32_Foundation", "Win32_UI_Input_KeyboardAndMouse", "Win32_System_WindowsProgramming", "Win32_System_SystemServices", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_OpenGL", "Win32_System_LibraryLoader", "Win32_System_Console", "Win32_Graphics_Gdi"] }

[features]
default = ["parking-lot"]
no-msgs = []
clear = []
force-compile = []
save-blob = []
spin-lock = ["dep:spin"]
parking-lot = ["dep:parking_lot"]
