[package]
name = "example-wnd"
version = "0.1.0"
edition = "2021"
authors = ["floob, sy1ntexx, unknowntrojan"]
description = "Example opengl dll for egui d3d11 showcase."
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
egui = "0.20.1"
image = { version = "0.24", features = ["jpeg"] }
retour = "0.1"

[dependencies.egui_extras]
version = "0.20"
features = ["image"]

[dependencies.egui-opengl-internal]
path = "../egui-opengl-internal"
features = ["force-compile", "save-blob", "parking-lot"]

[dependencies.windows]
version = "0.44"
features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
]
